<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TourismApp</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="first">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="togglebutton_title">Only Toggle Theme would work</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="sign_up">New User? Sign up.</string>
    <string name="signup">Sign-Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="log_in">LOG-IN</string>
    <string name="login">LOGIN</string>
    <string name="options">options</string>
    <string name="your_profile_image">Your Profile Image</string>
    <string name="register_form">Register Form</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Log-Out</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="image">image</string>
    <string name="please_log_into_your_existing_account">Please Log into your existing account</string>
    <string name="please_register_your_account">Create Acount</string>
    <string name="profile">User Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="places">Places</string>
    <string name="hotels">Hotels</string>
    <string name="bookings">Bookings</string>
    <string name="place">Place</string>
    <string name="hotel">Hotel</string>
    <string name="your_old_password">Your Old Password</string>
    <string name="your_new_password">Your New Passsword</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="userimage">UserImage</string>
    <string name="background_image">background Image</string>
    <string name="change">Change</string>
    <string name="history">History</string>
    <string name="close">Close</string>
    <string name="profilelogo">profileLogo</string>
    <string name="booking">Booking</string>
    <string name="logo">logo</string>
    <string name="historylogo">historylogo</string>
    <string name="explore_india">Explore YourSelf!</string>
    <string name="top_tourist_destinations">Top Tourist Destinations</string>
    <string name="set_new_password">Set New Password</string>
    <string name="loginimage">loginImage</string>
    <string name="recycleicon">recycleIcon</string>
    <string name="about_us_png1">About Us PNG!</string>
    <string name="why_choose_us">Why choose us?</string>
    <string name="provide_a_best_facality_and_instant_respons_for_few_hour_in_customer_we_provide_best_tour_packages_in_your_budget">Provide a best facality and instant respons for few hour in customer We Provide Best Tour Packages In Your Budget</string>
    <string name="about_us_png2">About Us PNG2</string>
    <string name="our_service">OUR SERVICE</string>
    <string name="about_Us_Discription1">We Are provide Service 24/7 and different Type of Things Link :</string>
    <string name="our_team">OUR TEAM</string>
    <string name="about_Us_Description_3" tools:ignore="TypographyDashes">our tourism business is a Top 5 in All india and achieve NATIONAL TOURISM AWARDS 2009-10. we are provide booking hotel in india and show different typs of package in all of the world.</string>
    <string name="aboutuspng3">aboutUsPng3</string>
    <string name="top_hotels">Top Hotels</string>
    <string name="details">Details</string>
    <string name="city">City:</string>
    <string name="price">Price:</string>
    <string name="country">Country:</string>
    <string name="book_hotel">Book Hotel</string>
    <string name="booking_for">Booking For</string>
    <string name="totalprice">TotalPrice:</string>
    <string name="hotelname">HotelName:</string>
    <string name="book_for">Book For:</string>
    <string name="booking_date">Booking Date: </string>
    <string name="arrival_date">Arrival Date:</string>
    <string name="leaving_date">Leaving Date:</string>
    <string name="total_days">Total Days:</string>
    <string name="total_rooms">Total Rooms:</string>
    <string name="per_day_price">Per Day Price:</string>
    <string name="total_price">Total Price:</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="viewall">View-All</string>
    <string name="select_booking_date">Select Booking Date</string>
    <string name="select_arrival_date">Select Arrival Date</string>
    <string name="select_leaving_date">Select Leaving Date</string>
    <string name="calenderimage">CalenderImage</string>
    <string name="rooms">Rooms</string>
    <string name="days">Days</string>
    <string name="Price">Price</string>
    <string name="todo">todo</string>
    <string name="create_accout_below">Go ahead and sign up, let everyone know how awesome you are!</string>
    <string name="forgetpassword">ForgetPassword</string>
    <string name="forgotpassword_text">Don’t worry! It happens. Please enter the email associated with your account.</string>
    <string name="submit">submit</string>
    <string name="reset_password">Reset Password</string>
    <string name="resetpassword_text">Ready to create new password? Please type something you’ll remember.</string>
    <string name="new_password">New password</string>
    <string name="otp">OTP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="resetPassword">ResetPassword</string>
</resources>