<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_baseline_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:title="@string/tools" />
    </group>

    <item android:title="@string/togglebutton_title">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/navigationmenu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/about"
                android:icon="@android:drawable/ic_menu_day"
                android:title="@string/about" />
            <item
                android:id="@+id/btnLogout"
                android:icon="@drawable/navigationmenu_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>