<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottomNavHomeBtn"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:cnb_iconColor="@color/bottom_nav_color"/>

    <item
        android:id="@+id/bottomNavPlaceBtn"
        android:title="@string/places"
        android:icon="@drawable/ic_place"
        app:cnb_iconColor="@color/bottom_nav_color"/>

    <item
        android:id="@+id/bottomNavHotelBtn"
        android:title="@string/hotels"
        android:icon="@drawable/ic_hotel"
        app:cnb_iconColor="@color/bottom_nav_color"/>

    <item
        android:id="@+id/bottomNavBookingBtn"
        android:title="@string/bookings"
        android:icon="@drawable/ic_booking"
        app:cnb_iconColor="@color/bottom_nav_color"/>
</menu>