<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_signup_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:layout_gravity="end"
            android:layout_margin="10sp"
            android:contentDescription="@string/loginimage" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="215sp"
            android:layout_gravity="center"
            android:src="@drawable/forgot_password"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/lblWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_white"
            android:text="@string/forgot_password"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_sans_extrabold" />

        <TextView
            android:id="@+id/lblaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8sp"
            android:textColor="@color/black_white"
            android:gravity="center"
            android:text="@string/forgotpassword_text"
            android:layout_marginTop="20sp"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_signup_editext"
            android:layout_marginHorizontal="15sp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="9sp"
                android:src="@drawable/email_icon"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginStart="15sp"
                android:layout_toEndOf="@id/imageView4"
                android:background="@null"
                android:hint="@string/your_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="10sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendOtp"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20sp"
            android:background="@drawable/login_signup_button"
            android:elevation="10sp"
            android:text="@string/submit"
            android:textSize="20sp"
            tools2:ignore="TextContrastCheck"/>
    </LinearLayout>
</ScrollView>

