<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas..com/tools"
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_signup_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_gravity="end"
        android:layout_margin="10sp"
        android:contentDescription="@string/loginimage" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:layout_gravity="center"
        android:src="@drawable/login_register_image"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_white"
        android:text="@string/welcome_back"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/raleway_extrabolditalic" />

    <TextView
        android:id="@+id/lblaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_white"
        android:layout_gravity="center"
        android:text="@string/please_log_into_your_existing_account"
        android:layout_marginTop="20sp"
        android:textSize="16sp"
        android:fontFamily="@font/raleway_extrabolditalic" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:fontFamily="@font/raleway_extrabolditalic"
        android:layout_marginTop="25sp"
        android:background="@drawable/login_signup_editext"
        android:hint="@string/your_email"
        android:padding="10sp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:autofillHints="password"
            android:textStyle="bold"
            android:background="@drawable/login_signup_editext"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:fontFamily="@font/raleway_extrabolditalic"
            android:gravity="center"
            android:padding="10sp"
            tools:ignore="TextFields" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20sp"
            android:background="@drawable/login_signup_button"
            android:elevation="10sp"
            android:text="@string/log_in"
            android:fontFamily="@font/raleway_extrabolditalic"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/txtPassword"
            tools2:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black_white"
        android:layout_marginTop="15sp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:fontFamily="@font/raleway_extrabolditalic"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        tools2:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
    </ScrollView>

