<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/login_signup_background"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:src="@drawable/login_register_image"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/lblaccount"
        android:textColor="@color/black_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_register_your_account"
        android:layout_marginTop="10sp"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:fontFamily="@font/raleway_extrabolditalic" />

    <EditText
        android:id="@+id/txtUsername"
        android:textColor="@color/black_white"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/login_signup_editext"
        android:hint="@string/username"
        android:fontFamily="@font/raleway_extrabolditalic"
        android:gravity="center"
        android:autofillHints="name"
        android:inputType="text"
        android:padding="10sp" />
    <EditText
        android:id="@+id/txtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:textColor="@color/black_white"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="10sp"
        android:autofillHints="phone"
        android:fontFamily="@font/raleway_extrabolditalic"
        android:gravity="center"
        android:background="@drawable/login_signup_editext"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:padding="10sp"
        />

    <EditText
        android:id="@+id/txtEmail"
        android:autofillHints="emailAddress"
        android:layout_width="match_parent"
        android:textColor="@color/black_white"
        android:layout_height="60sp"
        android:layout_marginStart="20sp"
        android:fontFamily="@font/raleway_extrabolditalic"
        android:gravity="center"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/login_signup_editext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:textColor="@color/black_white"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/raleway_extrabolditalic"
        android:gravity="center"
        android:background="@drawable/login_signup_editext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="10sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/txtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:textColor="@color/black_white"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/login_signup_editext"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:fontFamily="@font/raleway_extrabolditalic"
        android:gravity="center"
        android:padding="10sp"
        android:autofillHints="password"
        tools:ignore="TextFields" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20sp"
            android:background="@drawable/login_signup_button"
            android:fontFamily="@font/raleway_extrabolditalic"
            android:text="@string/signup"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>