<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas..com/tools"
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_signup_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:layout_gravity="end"
            android:layout_margin="10sp"
            android:contentDescription="@string/loginimage" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="220sp"
            android:layout_gravity="center"
            android:src="@drawable/reset_password"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/lblWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_white"
            android:text="@string/reset_password"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_sans_extrabold" />

        <TextView
            android:id="@+id/lblaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8sp"
            android:textColor="@color/black_white"
            android:gravity="center"
            android:text="@string/resetpassword_text"
            android:layout_marginTop="20sp"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/otp_layout"
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_signup_editext"
            android:layout_marginHorizontal="15sp">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="9sp"
                android:src="@drawable/password_icon"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/txtOtp"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginStart="15sp"
                android:layout_toEndOf="@id/imageView10"
                android:background="@null"
                android:hint="@string/otp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="10sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_signup_editext"
            android:layout_marginHorizontal="15sp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="9sp"
                android:src="@drawable/lock"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginStart="15sp"
                android:layout_toEndOf="@id/imageView4"
                android:background="@null"
                android:hint="@string/new_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="10sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_signup_editext"
            android:layout_marginHorizontal="15sp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="9sp"
                android:src="@drawable/lock"
                android:contentDescription="@string/todo"  />

            <EditText
                android:id="@+id/txtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginStart="15sp"
                android:autofillHints="password"
                android:background="@null"
                android:layout_toEndOf="@id/imageView5"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textStyle="bold"
                tools:ignore="TextFields" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20sp"
            android:background="@drawable/login_signup_button"
            android:elevation="10sp"
            android:text="@string/resetPassword"
            android:textSize="20sp"
            tools2:ignore="TextContrastCheck"/>
    </LinearLayout>
</ScrollView>

