<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas..com/tools"
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_signup_background"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/lblaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_white"
        android:layout_gravity="center"
        android:text="@string/set_new_password"
        android:textSize="25sp"
        android:fontFamily="@font/raleway_extrabolditalic" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/login_signup_editext"
        android:hint="@string/your_email"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="10sp"
        android:fontFamily="@font/raleway_extrabolditalic"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtOldPassword"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:autofillHints="password"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/raleway_extrabolditalic"
        android:background="@drawable/login_signup_editext"
        android:hint="@string/your_old_password"
        android:inputType="textPassword"
        android:padding="10sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/txtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:autofillHints="password"
        android:fontFamily="@font/raleway_extrabolditalic"
        android:gravity="center"
        android:background="@drawable/login_signup_editext"
        android:hint="@string/your_new_password"
        android:inputType="textPassword"
        android:padding="10sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/txtNewConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:autofillHints="password"
        android:gravity="center"
        android:fontFamily="@font/raleway_extrabolditalic"
        android:background="@drawable/login_signup_editext"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:padding="10sp"
        tools:ignore="TextFields" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/login_signup_button"
        android:elevation="10sp"
        android:fontFamily="@font/raleway_extrabolditalic"
        android:text="@string/change_password"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtOldPassword"
        tools2:ignore="TextContrastCheck" />


</LinearLayout>